# Gsheet-to-notion

./: .gitignore  .gitlint  .pre-commit-config.yaml  Pipfile  README.rst  gsh.py  gsheet2notion.py  notion_cli3.py  pyproject.toml  requirements.txt  secret.py  setup.cfg  setup.py  slack_msg.py
