[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
name = gsheet2notion
version = 1.0.0
description = Mesto's Google Sheet to Notion
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/IgorKha/Gsheet-to-notion
author = IgorKha
author_email = hahabahov@yandex.ru
maintainer = Alex Turbov
maintainer_email = i.zaufi@gmail.com
keywords =
    mesto
    sheet
    notion
license = GPLv3
platform = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Utilities

[options]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
install_requires =
    click
    exitstatus
    gspread
    notion
    slack_sdk
python_requires = >=3.8
zip_safe = True

[options.entry_points]
console_scripts = gsheet2notion = gsheet2notion:gsheet2notion

[bdist_wheel]
universal = 1

[mypy]
cache_dir = build/.mypy_cache
ignore_missing_imports = True
warn_return_any = True
warn_unused_configs = True
namespace_packages = True
pretty = True
